--- a/03~04/TodoApp/package.json
+++ b/03~04/TodoApp/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@types/react-native-vector-icons": "^6.4.12",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-safe-area-context": "^4.3.3"
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
