--- a/05/Navigation/package.json
+++ b/05/Navigation/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -19,6 +20,7 @@
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
