--- a/06~07/DayLog/package.json
+++ b/06~07/DayLog/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@types/uuid": "^8.3.4",
+    "date-fns": "^2.29.3",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-get-random-values": "^1.8.0",
