--- a/06~07/DayLog/package.json
+++ b/06~07/DayLog/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.29.3",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-calendars": "^1.1290.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
