--- a/06~07/DayLog/package.json
+++ b/06~07/DayLog/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.5.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -17,8 +18,9 @@
     "date-fns": "^2.29.3",
     "react": "18.1.0",
     "react-native": "0.70.3",
-    "react-native-calendars": "^1.1290.0",
+    "react-native-calendars": "1.1284.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
