--- a/08~09/UpshipGallery/.gitignore
+++ b/08~09/UpshipGallery/.gitignore
@@ -62,3 +62,6 @@ buck-out/
 # Ruby / CocoaPods
 /ios/Pods/
 /vendor/bundle/
+
+/ios/UpshipGallery/GoogleService-info.plist
+/android/app/google-services.json
