--- a/08~09/UpshipGallery/package.json
+++ b/08~09/UpshipGallery/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-image-picker": "^4.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0"
