08~09: 리팩토링 및 포스트 수정/삭제 기능, 이후 Refresh 기능

--- a/08~09/UpshipGallery/android/app/build.gradle
+++ b/08~09/UpshipGallery/android/app/build.gradle
@@ -163,6 +163,14 @@ android {
             }
         }
     }
+    packagingOptions {
+        pickFirst '**/libjsc.so'
+        pickFirst '**/libc++_shared.so'
+        pickFirst '**/libfbjni.so'
+        pickFirst '**/llibturbomodulejsijni.so'
+        pickFirst '**/libturbomodulejsijni.so'
+        // Add more according to your error here
+    }
 
     if (isNewArchitectureEnabled()) {
         // We configure the NDK build only if you decide to opt-in for the New Architecture.
