--- a/08~09/UpshipGallery/package.json
+++ b/08~09/UpshipGallery/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "eventemitter3": "^4.0.7",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-get-random-values": "^1.8.0",
